--- a/styles.css
+++ b/styles.css
@@ -23,22 +23,23 @@
 
 /*Centering the site */
 .title {
-    width: 20%; /* Could be anything, but 75% works here. */
-    margin: auto; /* This is what center the content div itself. */
- }
+    width: 20%; 
+    margin: auto; 
+ }    
 
  /*Centering the title */
 .content {
-    width: 50%; /* Could be anything, but 75% works here. */
-    margin: auto; /* This is what center the content div itself. */
+    width: 50%; 
+    margin: auto; 
  }
 
 
 body{
   background-color:var(--eerie-black);  
   font-family: Verdana, Geneva, sans-serif;
-  color: var(--text);
+  color: var(--vanilla);
   font-weight: 4000;
+  
 }
 
 h1{ 
@@ -82,35 +83,15 @@ h2{
   width: fit-content;
   box-shadow: 0 9px var(--button-active);
   border: 3px solid var(--yale-blueNeon);
+  color: var(--vanilla);
 }
 .btn:hover{
   background-color: var(--yale-blue);
+
 }
 .btn:active{
   background-color: var(--yale-blue);
   box-shadow: 0 5px var(--button-active);
   transform: translateY(5px);
-
-}
-
-.prjbtn {
-  background-color: var(--yale-blueBC);
-  padding: 40px 30px; 
-  font-size: 30px; 
-  cursor: pointer; 
-  border-radius: 12%;
-  width: fit-content;
-  box-shadow: 0 9px var(--button-active);
-  border: 3px solid var(--yale-blueNeon);
-  font-family: Verdana, Geneva, sans-serif;
   
-  
-}
-.prjbtn:hover{
-  background-color: var(--yale-blue);
-}
-.prjbtn:active{
-  background-color: var(--yale-blue);
-  box-shadow: 0 5px var(--button-active);
-  transform: translateY(5px);
 }
