--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
 
 /*Centering the site */
 .title {
-    width: 20%; 
+    width: 50%; 
     margin: auto; 
  }    
 
@@ -81,43 +81,41 @@ a {
 
 /*Buttons*/
 
-button:hover{
-  background-color: var(--yale-blue);
-
-}
-button:active{
-  background-color: var(--yale-blue);
-  box-shadow: 0 5px var(--button-active);
-  transform: translateY(5px);  
-}
-
-
-
-/*Socials Buttons*/
-.SclBtn {
+/*Buttons without a description*/
+StBtn {
   
+  display: flex;
+
   position: relative;
-  background-color: var(--yale-blueBC);
-  padding: 12px 16px; 
-  font-size: 30px; 
-  cursor: pointer; 
-  border-radius: 10%;
+  justify-content: center;
+  align-items: center;
+
   width: fit-content;
+  background-color: var(--yale-blueBC);
+  padding: 16px; 
+  font-size: 24px; 
+
+  min-width: 24px;
+  min-height: 24px;
+  max-width: 24px;
+  min-width: 24px;
+
+  cursor: pointer; 
+  border-radius: 12%;
   box-shadow: 0 9px var(--button-active);
   border: 3px solid var(--yale-blueNeon);
   color: var(--vanilla);
 }
-.SclBtn:hover{
+StBtn:hover{
   background-color: var(--yale-blue);
 
 }
-.SclBtn:active{
+StBtn:active{
   background-color: var(--yale-blue);
   box-shadow: 0 5px var(--button-active);
   transform: translateY(5px);
   
 }
-
 
 /*Dynamic buttons*/
 
@@ -131,8 +129,14 @@ btn {
 
   width: fit-content;
   background-color: var(--yale-blueBC);
-  padding: 12px 16px; 
-  font-size: 24px; 
+  padding: 16px; 
+  font-size: 20px; 
+
+  min-width: 24px;
+  min-height: 24px;
+  max-width: 24px;
+  min-width: 24px;
+
   cursor: pointer; 
   border-radius: 12%;
   box-shadow: 0 9px var(--button-active);
@@ -158,59 +162,75 @@ btn:hover .icon{
 }
 .BL-anchor{
   position: fixed;
-  bottom: 10px;
+  bottom: 20px;
   left: 10px;
   z-index: 100;
-}
+  }
 
 /* Info Block Styling */
 .infoTitle {
 
-  
+  position: relative;
   padding: 10px 20px;
   border: 2px inset var(--yale-blueBC);
-  width: fit-content;
+  width: 50%;
+  height: 24px;
   background: var(--yale-blueBC);
   border: solid var(--yale-blueNeon);
   border-radius: 5px;
-  display: none; /* Hidden by default */
-  
+  justify-self: right;
+  justify-items: right;
+  display: block;
 
 }
 .infoTag {
 
-  
+  position: relative;
   padding: 10px 20px;
   border: 2px inset var(--yale-blueBC);
-  width: fit-content;
+  width: 50%;
+
   background: var(--yale-blueBC);
   border: solid var(--yale-blueNeon);
   border-radius: 5px;
-  display: none; /* Hidden by default */
-  
+  justify-self: left;
+  display: block;
+    
 
 }
 .infoBlock {
 
+  position: relative;
   padding: 10px 20px;
   border-radius: 5px;
-  display: none; /* Hidden by default */
+  width:inherit;
+  height: 48px;
   background: var(--yale-blueBC);
   border: solid var(--yale-blueNeon);
-  
- 
+  justify-items: center;
+  display: block;
 }
-
-.btnInfo{
-
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  justify-items: right;
-}
-
 .container {
   display: flex;
-  flex-direction: row; /* Stacks items vertically */
+  flex-direction: row; 
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 375px;
+  overflow-x:hidden;
+  scrollbar-width: none;
+  max-height: 200px;
 
 }
+
+.context {
+  margin-top: 10px;
+}
+
+/*
+TO DO 
+
+  WIN99 TYPE BLOCKS / BUTTONS
+  ADD A CUSTOM BACKGROUND BECAUSE A FLAT COLOUR IS REALLY LAME TBH
+
+
+*/
